--- a/client/src/Login.css
+++ b/client/src/Login.css
@@ -2,24 +2,28 @@
     background-image: url(logo.png);
     
     position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
+    top: 3px;
+    bottom: 3px;
+    left: 3px;
+    right: 3px;
   }
   
   #login-form {
     position: relative;
     top: calc(50vh - 144px);
-    left: calc(50vw - 210px);
+    width: 300px;
+    height: 30;
+    margin: auto;  
     padding-top: 36px;
     padding-bottom: 66px;
-    width: 420px;
+    
     text-align: center;
-    background-color: white;
+    background-color:black;
     border-radius: 22px;
   }
-  
+  h2{
+    color: gold;
+  }
   .login-button {
     cursor: pointer;
     color: white;
@@ -29,6 +33,6 @@
   }
   
   .google-login{
-    background-color: #4285f4;
-    color: white;
+    background-color: gold;
+    color: black;
   }
